# sponsorblock.py

./: .gitignore  README.md  TODO.md  index.md  pylama.ini  requirements-docs.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
docs/: api_reference.rst  conf.py  index.rst  requirements.txt
docs/_static/: custom.css
sponsorblock/: __init__.py  __main__.py  classes.py  client.py  database.py  errors.py  models.py  utils.py
