[metadata]
name = sponsorblock.py
version = 0.1.2
description = An unofficial wrapper for the SponsorBlock API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://wasi-master.github.io/sponsorblock.py/
author = Wasi Master
author_email = arianmollik323@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet
keywords =
    sponsorblock.py
    documentation
    sponsorblock
    python
    api
    wrapper
    sponsor
    block
    youtube
    youtube-dl
    youtube-dlp

[options]
packages = sponsorblock
install_requires =
    requests
python_requires = >=3.6

[options.entry_points]
console_scripts = sponsorblock=sponsorblock.__main__:run
